// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render 1`] = `
<EuiForm
  className="sharePanelContent"
  data-test-subj="shareUrlForm"
>
  <EuiFormRow
    describedByIds={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    helpText="Can't share as saved object until the dashboard has been saved."
    label="Generate the link as"
  >
    <EuiRadioGroup
      idSelected="snapshot"
      onChange={[Function]}
      options={
        Array [
          Object {
            "data-test-subj": "exportAsSnapshot",
            "id": "snapshot",
            "label": <EuiFlexGroup
              alignItems="stretch"
              component="div"
              direction="row"
              gutterSize="none"
              justifyContent="flexStart"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                component="div"
                grow={true}
              >
                Snapshot
              </EuiFlexItem>
              <EuiFlexItem
                component="div"
                grow={false}
              >
                <EuiIconTip
                  aria-label="Info"
                  content="Snapshot URLs encode the current state of the dashboard in the URL itself.
            Edits to the saved dashboard won't be visible via this URL."
                  position="bottom"
                  type="questionInCircle"
                />
              </EuiFlexItem>
            </EuiFlexGroup>,
          },
          Object {
            "data-test-subj": "exportAsSavedObject",
            "disabled": true,
            "id": "savedObject",
            "label": <EuiFlexGroup
              alignItems="stretch"
              component="div"
              direction="row"
              gutterSize="none"
              justifyContent="flexStart"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                component="div"
                grow={true}
              >
                Saved object
              </EuiFlexItem>
              <EuiFlexItem
                component="div"
                grow={false}
              >
                <EuiIconTip
                  aria-label="Info"
                  content="You can share this URL with people to let them load the most recent saved version of this dashboard."
                  position="bottom"
                  type="questionInCircle"
                />
              </EuiFlexItem>
            </EuiFlexGroup>,
          },
        ]
      }
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
  >
    <EuiFlexGroup
      alignItems="stretch"
      component="div"
      direction="row"
      gutterSize="none"
      justifyContent="flexStart"
      responsive={true}
      wrap={false}
    >
      <EuiFlexItem
        component="div"
        grow={true}
      >
        <EuiSwitch
          checked={false}
          data-test-subj="useShortUrl"
          label="Short URL"
          onChange={[Function]}
        />
      </EuiFlexItem>
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiIconTip
          aria-label="Info"
          content="We recommend sharing shortened snapshot URLs for maximum compatibility.
      Internet Explorer has URL length restrictions,
      and some wiki and markup parsers don't do well with the full-length version of the snapshot URL,
      but the short URL should work great."
          position="bottom"
          type="questionInCircle"
        />
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiFormRow>
  <EuiCopy
    afterMessage="Copied"
    anchorClassName="sharePanel__copyAnchor"
    textToCopy="http://localhost/"
  />
</EuiForm>
`;

exports[`should enable saved object export option when objectId is provided 1`] = `
<EuiForm
  className="sharePanelContent"
  data-test-subj="shareUrlForm"
>
  <EuiFormRow
    describedByIds={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    label="Generate the link as"
  >
    <EuiRadioGroup
      idSelected="snapshot"
      onChange={[Function]}
      options={
        Array [
          Object {
            "data-test-subj": "exportAsSnapshot",
            "id": "snapshot",
            "label": <EuiFlexGroup
              alignItems="stretch"
              component="div"
              direction="row"
              gutterSize="none"
              justifyContent="flexStart"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                component="div"
                grow={true}
              >
                Snapshot
              </EuiFlexItem>
              <EuiFlexItem
                component="div"
                grow={false}
              >
                <EuiIconTip
                  aria-label="Info"
                  content="Snapshot URLs encode the current state of the dashboard in the URL itself.
            Edits to the saved dashboard won't be visible via this URL."
                  position="bottom"
                  type="questionInCircle"
                />
              </EuiFlexItem>
            </EuiFlexGroup>,
          },
          Object {
            "data-test-subj": "exportAsSavedObject",
            "disabled": false,
            "id": "savedObject",
            "label": <EuiFlexGroup
              alignItems="stretch"
              component="div"
              direction="row"
              gutterSize="none"
              justifyContent="flexStart"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                component="div"
                grow={true}
              >
                Saved object
              </EuiFlexItem>
              <EuiFlexItem
                component="div"
                grow={false}
              >
                <EuiIconTip
                  aria-label="Info"
                  content="You can share this URL with people to let them load the most recent saved version of this dashboard."
                  position="bottom"
                  type="questionInCircle"
                />
              </EuiFlexItem>
            </EuiFlexGroup>,
          },
        ]
      }
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
  >
    <EuiFlexGroup
      alignItems="stretch"
      component="div"
      direction="row"
      gutterSize="none"
      justifyContent="flexStart"
      responsive={true}
      wrap={false}
    >
      <EuiFlexItem
        component="div"
        grow={true}
      >
        <EuiSwitch
          checked={false}
          data-test-subj="useShortUrl"
          label="Short URL"
          onChange={[Function]}
        />
      </EuiFlexItem>
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiIconTip
          aria-label="Info"
          content="We recommend sharing shortened snapshot URLs for maximum compatibility.
      Internet Explorer has URL length restrictions,
      and some wiki and markup parsers don't do well with the full-length version of the snapshot URL,
      but the short URL should work great."
          position="bottom"
          type="questionInCircle"
        />
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiFormRow>
  <EuiCopy
    afterMessage="Copied"
    anchorClassName="sharePanel__copyAnchor"
    textToCopy="http://localhost/"
  />
</EuiForm>
`;
